# HSE-CA-HW5

./: CMakeLists.txt  отчет.docx
code/: AsyncBuffer.cpp  AsyncBuffer.h  ConsumerAllChecker.cpp  ConsumerAllChecker.h  ConsumerSharpener.cpp  ConsumerSharpener.h  ConsumerStraightChecker.cpp  ConsumerStraightChecker.h  Generator.cpp  Generator.h  Machine.cpp  Machine.h  Pin.cpp  Pin.h  Task5.cpp
